--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-native": "0.40.0"
+    "react-native": "0.40.0",
+    "react-native-sqlite-storage": "git+https://github.com/andpor/react-native-sqlite-storage.git"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
